--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,9 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
-*.local
+*.locals
+.env
+!.env.example
 
 # Editor directories and files
 .vscode/*
